Fix: Addition Mobile Layout 43

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1527,7 +1527,9 @@ body {
         display: none !important;
     }
 
-
+    .hide-on-mobile {
+    display: none;
+    }
     /* === HERO SECTION SHRINK-TO-FIT LOGIC === */
     .desktop-hero-wrapper {
         width: 1650px;
